<resources>
    <string name="app_name">MyFitness</string>
    <string name="title_home">Bookings</string>
    <string name="book">BOOK</string>
    <string name="contact">CONTACT</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="bio">Bio</string>
</resources>