<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/ivBack"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/title_home"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivProfileLargeImage"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground"
                    app:riv_corner_radius_top_left="15dp"
                    app:riv_corner_radius_top_right="15dp"
                    app:riv_mutate_background="true"
                    app:riv_oval="false" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/ivBook"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/red_circle_drawable"
                        android:gravity="center"
                        android:text="@string/book"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/ivContact"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/red_circle_drawable"
                        android:gravity="center"
                        android:text="@string/contact"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="false"
                    android:text="@string/bio"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:drawableLeftCompat="@drawable/ic_calender" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="false"
                    android:text="@string/dummy"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="20dp" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    android:text="+1 123 456 789"
                    app:drawableLeftCompat="@drawable/ic_calender"
                    tools:text="+1 123 456 789" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    android:text="fjmoradiya@gmail.com"
                    app:drawableLeftCompat="@drawable/ic_calender"
                    tools:text="fjmoradiya@gmail.com" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>